# Course_QT

Course-main/: CMakeLists.txt
Course-main/database/: mydb.db
Course-main/documentation/: Doxyfile
Course-main/source/: CMakeLists.txt  all.cpp  all.h  all.ui  doctors.cpp  doctors.h  doctors.ui  login.cpp  login.h  login.ui  main.cpp  registration.cpp  registration.h  registration.ui  user.cpp  user.h  user.ui  zakaz.cpp  zakaz.h  zakaz.ui
